--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera!</title>
+	<title>HTML is Structure Only</title>
 </head>
 <body>
-    <h1>Hello world!</h1>
+    <h1 style="color:green;font-size:60px;text-align: center;">HTML is Structure Only</h1>
+    <p style="margin:0 100px 0 100px; font-size:1.5em;">Dexima chemical is one of the leading company in Trivandrum district for its chemical products.It include many kind of items including hand sanitizers and floor cleaners</p>
+    <footer>
+    	<hr>
+    	<p style="text-align: :center;" onclick="="alert('Emailing can make us to help you');">
+    	Helpline:smohashafqhamd@server.com</p>
+    </footer>
 </body>
 </html>
