--- a/site/index.html
+++ b/site/index.html
@@ -8,8 +8,9 @@
     <p style="margin:0 100px 0 100px; font-size:1.5em;">Dexima chemical is one of the leading company in Trivandrum district for its chemical products.It include many kind of items including hand sanitizers and floor cleaners</p>
     <footer>
     	<hr>
-    	<p style="text-align: :center;" onclick="alert('Emailing can make us to help you');">
-    	Helpline:smohashafqhamd@server.com</p>
+    	<p style="text-align:center;" onclick="alert('Emailing can make us to help you');">
+    	Helpline:smohashafqhamd@server.com
+       </p>
     </footer>
 </body>
 </html>
